# TGUI

./: .appveyor.yml  .codecov.yml  .gitattributes  .gitignore  .travis.yml  404.html  404.md  Android.mk  CMakeLists.txt  CNAME  CONTRIBUTING.md  Doxyfile  README  README.md  README.txt  _config.yml  appveyor.yml  change log.txt  changelog.md  changelog.txt  highlight.css  index.html  index.md  install.sh  license.txt  robots.txt  sitemap.xml  style.css
doc/: CMakeLists.txt  custom.css  doxyfile.in  doxygen-awesome.css  footer.html  header.html  mainpage.hpp
examples/: CMakeLists.txt  index.md  main-GLFW_GLES2.cpp  main-GLFW_OPENGL3.cpp  main-RAYLIB.cpp  main-SDL_GLES2.cpp  main-SDL_OPENGL3.cpp  main-SDL_RENDERER.cpp  main-SDL_TTF_GLES2.cpp  main-SDL_TTF_OPENGL3.cpp  main-SFML_GRAPHICS.cpp  main-SFML_OPENGL3.cpp  main-sdl.cpp  main-sfml.cpp
examples/0.5/: index.html
examples/0.6/: index.html
examples/0.7/: index.html
examples/0.8/: index.md
examples/0.9/: index.md
examples/Android/: project.properties
examples/FullExample/: FullExample.cpp
examples/LoadFromFile/: LoadFromFile.cpp  form.txt
examples/LoginScreen/: LoginScreen.cpp
examples/RichTextLabel-devel/: RichTextLabel.cpp
examples/Scalable/: Scalable.cpp
examples/android/: AndroidManifest.xml
examples/android-SDL_TTF_GLES2/: .gitignore  README.txt  build.gradle
examples/android-SFML_GRAPHICS/: build.gradle
examples/android-sdl/: .gitignore  README.txt
examples/full_example/: CMakeLists.txt  FullExample.cpp
examples/iOS/: CMakeLists.txt  iOS-example-SDL_RENDERER.cpp  iOS-example-SFML_GRAPHICS.cpp  main.cpp
examples/iOS-SFML_GRAPHICS/: CMakeLists.txt
examples/login_screen/: CMakeLists.txt  LoginScreen.cpp
examples/many_different_widgets/: CMakeLists.txt  ManyDifferentWidgets.cpp
examples/scalable/: CMakeLists.txt  Scalable.cpp
examples/scalable_login_screen/: CMakeLists.txt  ScalableLoginScreen.cpp
examples/table-devel/: Table.cpp
gui-builder/: CMakeLists.txt  editing_screen.txt  start_screen.txt
gui-builder/include/: ButtonProperties.hpp  ComboBoxProperties.hpp  EditBoxProperties.hpp  Form.hpp  GuiBuilder.hpp  LabelProperties.hpp  ListBoxProperties.hpp  PanelProperties.hpp  PictureProperties.hpp  ProgressBarProperties.hpp  RadioButtonProperties.hpp  ScrollbarProperties.hpp  SliderProperties.hpp  SpinButtonProperties.hpp  TextBoxProperties.hpp  WidgetInfo.hpp  WidgetProperties.hpp
gui-builder/resources/: EditThemesWindow.txt  EditingScreen.txt  SelectionSquare.txt  StartScreen.txt
gui-builder/src/: Form.cpp  GuiBuilder.cpp  main.cpp
src/: Animation.cpp  Backend.cpp  BackendRenderTarget.cpp  BackendTexture.cpp  Base64.cpp  CMakeLists.txt  Color.cpp  Components.cpp  Container.cpp  Cursor.cpp  CustomWidgetForBindings.cpp  DefaultBackendWindow.cpp  FileDialogIconLoader.cpp  FileDialogIconLoaderLinux.cpp  FileDialogIconLoaderWindows.cpp  Filesystem.cpp  Font.cpp  Global.cpp  GuiBase.cpp  Layout.cpp  ObjectConverter.cpp  OpenGL.cpp  Signal.cpp  SignalManager.cpp  Sprite.cpp  String.cpp  SubwidgetContainer.cpp  SvgImage.cpp  TGUI-Main-Module.cppm.in  TGUI-Module.cppm.in  TGUI-Module.ixx.in  TabAlignment.cpp  Text.cpp  TextStyle.cpp  Texture.cpp  TextureManager.cpp  Timer.cpp  ToolTip.cpp  Transform.cpp  TwoFingerScrollDetect.cpp  (+2 more)
src/Android/: CMakeLists.txt  TGUIActivity.cpp
src/Backend/: CMakeLists.txt  GLFW-GLES2.cpp  GLFW-OpenGL3.cpp  SDL-GLES2.cpp  SDL-OpenGL3.cpp  SDL-Renderer.cpp  SDL-TTF-GLES2.cpp  SDL-TTF-OpenGL3.cpp  SFML-Graphics.cpp  SFML-OpenGL3.cpp  raylib.cpp
src/Backends/: CMakeLists.txt
src/Loading/: DataIO.cpp  Deserializer.cpp  ImageLoader.cpp  Serializer.cpp  Theme.cpp  ThemeLoader.cpp  WidgetFactory.cpp
src/Renderers/: BoxLayoutRenderer.cpp  ButtonRenderer.cpp  ChatBoxRenderer.cpp  ChildWindowRenderer.cpp  ColorPickerRenderer.cpp  ComboBoxRenderer.cpp  EditBoxRenderer.cpp  FileDialogRenderer.cpp  GroupRenderer.cpp  KnobRenderer.cpp  LabelRenderer.cpp  ListBoxRenderer.cpp  ListViewRenderer.cpp  MenuBarRenderer.cpp  MessageBoxRenderer.cpp  PanelListBoxRenderer.cpp  PanelRenderer.cpp  PictureRenderer.cpp  ProgressBarRenderer.cpp  RadioButtonRenderer.cpp  RangeSliderRenderer.cpp  ScrollablePanelRenderer.cpp  ScrollbarRenderer.cpp  SeparatorLineRenderer.cpp  SliderRenderer.cpp  SpinButtonRenderer.cpp  SplitContainerRenderer.cpp  TabsRenderer.cpp  TextAreaRenderer.cpp  TreeViewRenderer.cpp  WidgetRenderer.cpp
src/TGUI/: AnimatedButton.cpp  AnimatedPicture.cpp  Animation.cpp  Backend.cpp  BackendFont.cpp  BackendRenderTarget.cpp  BackendText.cpp  BoxLayout.cpp  Button.cpp  CMakeLists.txt  Callback.cpp  Canvas.cpp  ChatBox.cpp  Checkbox.cpp  ChildWindow.cpp  ClickableObject.cpp  ClickableWidget.cpp  Clipboard.cpp  Clipping.cpp  Color.cpp  ComboBox.cpp  ConfigFile.cpp  Container.cpp  ContainerWidget.cpp  Cursor.cpp  CustomWidgetForBindings.cpp  EditBox.cpp  EventManager.cpp  Filesystem.cpp  Font.cpp  Form.cpp  Global.cpp  Grid.cpp  Group.cpp  GroupObject.cpp  Gui.cpp  GuiBase.cpp  HorizontalLayout.cpp  HorizontalWrap.cpp  InfoFileParser.cpp  (+46 more)
src/Widgets/: BitmapButton.cpp  BoxLayout.cpp  BoxLayoutRatios.cpp  Button.cpp  ButtonBase.cpp  Canvas.cpp  CanvasBase.cpp  ChatBox.cpp  CheckBox.cpp  ChildWindow.cpp  ClickableWidget.cpp  ColorPicker.cpp  ComboBox.cpp  EditBox.cpp  EditBoxSlider.cpp  FileDialog.cpp  Grid.cpp  Group.cpp  HorizontalLayout.cpp  HorizontalWrap.cpp  Knob.cpp  Label.cpp  ListBox.cpp  ListView.cpp  MenuBar.cpp  MessageBox.cpp  Panel.cpp  (+20 more)
tests/: AbsoluteOrRelativeValue.cpp  Animation.cpp  BackendEvents.cpp  Borders.cpp  CMakeLists.txt  Clipboard.cpp  Clipping.cpp  Color.cpp  CompareFiles.cpp  Container.cpp  Duration.cpp  EnableSoftwareRenderer.env  FileCompare.cpp  Filesystem.cpp  Focus.cpp  Font.cpp  HorizontalLayout.cpp  Layouts.cpp  MouseCursors.cpp  Outline.cpp  Signal.cpp  SignalManager.cpp  Sprite.cpp  String.cpp  SvgImage.cpp  Tests.cpp  Tests.hpp  Text.cpp  Texture.cpp  TextureManager.cpp  Timer.cpp  ToolTip.cpp  Vector2.cpp  VerticalLayout.cpp  Widget.cpp  catch.hpp  main.cpp  travis_android.sh  travis_linux.sh  travis_linux_tests.sh  (+3 more)
(+3465 files in other folders)
